Fix scrollbar colors

--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,7 @@ a:active {
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #ffffff;
   border-radius: 20px;
 }
 
